less
   Compiling wknup v0.1.0 (/home/yaroslav/Projects/rust/wknup)
error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `=>`
   --> src/vk.rs:104:19
    |
104 |             Entry => "Entry",
    |                   ^^ expected one of 8 possible tokens
    |
help: you might have meant to write a "greater than or equal to" comparison
    |
104 -             Entry => "Entry",
104 +             Entry >= "Entry",
    |

error: expected one of `.`, `?`, `{`, or an operator, found `<eof>`
   --> src/vk.rs:107:9
    |
103 |         write!(f, match  {
    |                   ----- while parsing this `match` expression
...
107 |         })
    |         ^ expected one of `.`, `?`, `{`, or an operator

error[E0412]: cannot find type `Instance` in this scope
  --> src/vk.rs:21:26
   |
21 |         instance: Option<Instance>,
   |                          ^^^^^^^^ not found in this scope
   |
help: consider importing one of these structs
   |
20 +     use crate::vk::Instance;
   |
20 +     use crate::vk::khr::android_surface::Instance;
   |
20 +     use crate::vk::khr::calibrated_timestamps::Instance;
   |
20 +     use crate::vk::khr::cooperative_matrix::Instance;
   |
     and 68 other candidates

error[E0412]: cannot find type `ApplicationInfo` in this scope
  --> src/vk.rs:22:19
   |
22 |         app_info: ApplicationInfo<'a>,
   |                   ^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing one of these structs
   |
20 +     use crate::vk::ApplicationInfo;
   |
20 +     use ash::vk::ApplicationInfo;
   |

error[E0412]: cannot find type `ExtensionManager` in this scope
  --> src/vk.rs:25:28
   |
25 |         extension_manager: ExtensionManager,
   |                            ^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this struct through its public re-export
   |
20 +     use crate::vk::ExtensionManager;
   |

error[E0412]: cannot find type `ValidationLayerManager` in this scope
  --> src/vk.rs:26:29
   |
26 |         validation_manager: ValidationLayerManager,
   |                             ^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this struct through its public re-export
   |
20 +     use crate::vk::ValidationLayerManager;
   |

error[E0412]: cannot find type `Entry` in this scope
  --> src/vk.rs:27:20
   |
27 |         entry: &'a Entry,
   |                    ^^^^^ not found in this scope
   |
help: consider importing one of these items
   |
20 +     use crate::vk::Entry;
   |
20 +     use std::collections::btree_map::Entry;
   |
20 +     use std::collections::btree_set::Entry;
   |
20 +     use std::collections::hash_map::Entry;
   |
     and 2 other candidates

error[E0412]: cannot find type `Entry` in this scope
  --> src/vk.rs:31:32
   |
31 |         pub fn init(entry: &'a Entry) -> Result<Self, Box<dyn Error>> {
   |                                ^^^^^ not found in this scope
   |
help: consider importing one of these items
   |
20 +     use crate::vk::Entry;
   |
20 +     use std::collections::btree_map::Entry;
   |
20 +     use std::collections::btree_set::Entry;
   |
20 +     use std::collections::hash_map::Entry;
   |
     and 2 other candidates

error[E0405]: cannot find trait `Error` in this scope
  --> src/vk.rs:31:63
   |
31 |         pub fn init(entry: &'a Entry) -> Result<Self, Box<dyn Error>> {
   |                                                               ^^^^^ not found in this scope
   |
help: consider importing one of these traits
   |
20 +     use crate::vk::Error;
   |
20 +     use std::error::Error;
   |

error[E0433]: failed to resolve: use of undeclared type `ExtensionManager`
  --> src/vk.rs:32:37
   |
32 |             let extension_manager = ExtensionManager::init(entry)?;
   |                                     ^^^^^^^^^^^^^^^^ use of undeclared type `ExtensionManager`
   |
help: consider importing this struct through its public re-export
   |
20 +     use crate::vk::ExtensionManager;
   |

error[E0433]: failed to resolve: use of undeclared type `ValidationLayerManager`
  --> src/vk.rs:33:38
   |
33 |             let validation_manager = ValidationLayerManager::init(entry)?;
   |                                      ^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ValidationLayerManager`
   |
help: consider importing this struct through its public re-export
   |
20 +     use crate::vk::ValidationLayerManager;
   |

error[E0433]: failed to resolve: use of undeclared type `ApplicationInfo`
  --> src/vk.rs:34:28
   |
34 |             let app_info = ApplicationInfo::default();
   |                            ^^^^^^^^^^^^^^^ use of undeclared type `ApplicationInfo`
   |
help: consider importing one of these structs
   |
20 +     use crate::vk::ApplicationInfo;
   |
20 +     use ash::vk::ApplicationInfo;
   |

error[E0412]: cannot find type `ApplicationInfo` in this scope
  --> src/vk.rs:54:53
   |
54 |         pub fn application_info(mut self, app_info: ApplicationInfo<'a>) -> Self {
   |                                                     ^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing one of these structs
   |
20 +     use crate::vk::ApplicationInfo;
   |
20 +     use ash::vk::ApplicationInfo;
   |

error[E0405]: cannot find trait `Error` in this scope
  --> src/vk.rs:59:63
   |
59 |         pub fn init_instance(&mut self) -> Result<(), Box<dyn Error>> {
   |                                                               ^^^^^ not found in this scope
   |
help: consider importing one of these traits
   |
20 +     use crate::vk::Error;
   |
20 +     use std::error::Error;
   |

error[E0433]: failed to resolve: use of undeclared type `InstanceCreateInfo`
  --> src/vk.rs:64:31
   |
64 |             let create_info = InstanceCreateInfo::default()
   |                               ^^^^^^^^^^^^^^^^^^ use of undeclared type `InstanceCreateInfo`
   |
help: consider importing one of these structs
   |
20 +     use crate::vk::InstanceCreateInfo;
   |
20 +     use ash::vk::InstanceCreateInfo;
   |

error[E0425]: cannot find value `entry` in this scope
   --> src/vk.rs:171:13
    |
87  |     entry: Option<Entry>,
    |     ----- a field by that name exists in `Self`
...
171 |             entry,
    |             ^^^^^

error[E0425]: cannot find value `instance_manager` in this scope
   --> src/vk.rs:172:13
    |
88  |     instance_manager: Option<InstanceManager<'a>>,
    |     ---------------- a field by that name exists in `Self`
...
172 |             instance_manager,
    |             ^^^^^^^^^^^^^^^^

error[E0425]: cannot find value `window_manager` in this scope
   --> src/vk.rs:173:13
    |
89  |     window_manager: Option<WindowManager>,
    |     -------------- a field by that name exists in `Self`
...
173 |             window_manager,
    |             ^^^^^^^^^^^^^^

warning: unused imports: `ApplicationInfo`, `DeviceCreateInfo`, `DeviceQueueCreateInfo`, `Device`, `InstanceCreateInfo`, `Instance`, `PhysicalDeviceFeatures`, `PhysicalDeviceType`, `PhysicalDevice`, `QueueFamilyProperties`, `QueueFlags`, `Queue`, `SurfaceKHR`, `self`, and `surface`
 --> src/vk.rs:2:5
  |
2 |     Device, Entry, Instance,
  |     ^^^^^^         ^^^^^^^^
3 |     khr::{self, surface},
  |           ^^^^  ^^^^^^^
4 |     vk::{
5 |         self, ApplicationInfo, DeviceCreateInfo, DeviceQueueCreateInfo, InstanceCreateInfo,
  |               ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^
6 |         PhysicalDevice, PhysicalDeviceFeatures, PhysicalDeviceType, Queue, QueueFamilyProperties,
  |         ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^  ^^^^^  ^^^^^^^^^^^^^^^^^^^^^
7 |         QueueFlags, SurfaceKHR,
  |         ^^^^^^^^^^  ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `extensions::ExtensionManager`
  --> src/vk.rs:11:5
   |
11 | use extensions::ExtensionManager;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `rc::Rc` and `vec::IntoIter`
  --> src/vk.rs:13:25
   |
13 | use std::{error::Error, rc::Rc, vec::IntoIter};
   |                         ^^^^^^  ^^^^^^^^^^^^^

warning: unused import: `validation::ValidationLayerManager`
  --> src/vk.rs:14:5
   |
14 | use validation::ValidationLayerManager;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0405, E0412, E0425, E0433.
For more information about an error, try `rustc --explain E0405`.
warning: `wknup` (lib) generated 4 warnings
error: could not compile `wknup` (lib) due to 18 previous errors; 4 warnings emitted
